--- a/android/src/main/res/layout/layout_card.xml
+++ b/android/src/main/res/layout/layout_card.xml
@@ -5,5 +5,6 @@
         android:id="@+id/card_input_widget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         />
 </RelativeLayout>
